@@ -165,8 +165,16 @@ used instead of a dot for moves not in the main variation.</dd>
 <dd>Change the way moves are marked on the board. The options are to mark the
 last move played with a dot or with a number, or to show the numbers of all
 moves, or not to show any marks.</dd>
+<dt>Show comment</dt>
+<dd>This option exists only in desktop mode and configures the visibility of
+the comment area when the position changes. By default, the comment area is
+only shown if a comment exists for the current position.</dd>
 </dl>
 </dd>
+<dt>Comment</dt>
+<dd>Toggle the visibility of the comment area in the current position.</dd>
+</dl>
+<dl>
 <dt>Fullscreen</dt>
 <dd>Make the main window full screen or leave full screen mode. To leave full
 screen mode without using the window menu, press the F11 key.</dd>
