@@ -183,8 +183,16 @@ Hauptvariante sind.</dd>
 <dd>Ändert die Markierung von Zügen auf dem Spielbrett. Die Optionen sind, den
 zuletzt gespielten Zug mit einem Punkt oder einer Nummer zu markieren, oder die
 Nummern aller Züge zu zeigen oder gar keine Markierung zu zeigen.</dd>
+<dt>Kommentar zeigen</dt>
+<dd>Diese Option existiert nur im Desktop-Modus und konfiguriert die
+Sichtbarkeit des Kommentarbereichs, wenn sich die Stellung ändert. Die
+Standardeinstellung ist, dass der Kommentarbereich nur sichtbar ist, wenn ein
+Kommentar zur aktuellen Stellung existiert.</dd>
 </dl>
 </dd>
+<dt>Kommentar</dt>
+<dd>Mach den Kommentarbereich in der aktuellen Stellung sichtbar oder nicht
+sichtbar.</dd>
 <dt>Vollbild</dt>
 <dd>Schaltet das Hauptfenster in den Vollbildmodus oder verlässt den
 Vollbildmodus. Um den Vollbildmodus ohne das Benutzen des Fenstermenüs zu
